Set git hub settings to empty #SN-77

--- a/src/RedShot.Application/appsettings.json
+++ b/src/RedShot.Application/appsettings.json
@@ -1,8 +1,8 @@
 {
   "AppSettings": {
     "GithubRepositoryDetails": {
-      "OwnerName": "ko-vasilev",
-      "RepositoryName": "CrmTelegramBot"
+      "OwnerName": "",
+      "RepositoryName": ""
     },
     "Email": "redshot@saritasa.com",
     "FfmpegWindowsDownloadPath": "https://www.gyan.dev/ffmpeg/builds/ffmpeg-release-essentials.zip",
