--- a/version 2/src/RedShot.Infrastructure.Abstractions/RedShot.Infrastructure.Abstractions.csproj
+++ b/version 2/src/RedShot.Infrastructure.Abstractions/RedShot.Infrastructure.Abstractions.csproj
@@ -1,8 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\RedShot.Infrastructure.Domain\RedShot.Infrastructure.Domain.csproj" />
