--- a/version 2/src/RedShot.Desktop/RedShot.Desktop.Skia.Gtk/RedShot.Desktop.Skia.Gtk.csproj
+++ b/version 2/src/RedShot.Desktop/RedShot.Desktop.Skia.Gtk/RedShot.Desktop.Skia.Gtk.csproj
@@ -1,14 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <OutputType Condition="'$(Configuration)'=='Release'">WinExe</OutputType>
     <OutputType Condition="'$(Configuration)'=='Debug'">Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
-  <ItemGroup Condition="exists('..\RedShot.Desktop.UWP')">
-    <EmbeddedResource Include="..\RedShot.Desktop.UWP\Package.appxmanifest" LogicalName="Package.appxmanifest" />
-    <Content Include="..\RedShot.Desktop.UWP\Assets\StoreLogo.png" Link="Assets\StoreLogo.png" />
-    <Content Include="Assets\Fonts\uno-fluentui-assets.ttf" />
-  </ItemGroup>
   <ItemGroup>
     <UpToDateCheckInput Include="..\RedShot.Desktop.Shared\**\*.xaml" />
   </ItemGroup>
@@ -19,6 +16,7 @@
     <PackageReference Include="Uno.UI.RemoteControl" Version="3.10.11" Condition="'$(Configuration)'=='Debug'" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\RedShot.Eto.Desktop\RedShot.Eto.Desktop.csproj" />
     <ProjectReference Include="..\..\RedShot.Mvvm\RedShot.Mvvm.csproj" />
   </ItemGroup>
   <Import Project="..\RedShot.Desktop.Shared\RedShot.Desktop.Shared.projitems" Label="Shared" />
