--- a/version 2/src/RedShot.Desktop/RedShot.Desktop.Skia.Wpf/RedShot.Desktop.Skia.Wpf.csproj
+++ b/version 2/src/RedShot.Desktop/RedShot.Desktop.Skia.Wpf/RedShot.Desktop.Skia.Wpf.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net5.0-windows</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
@@ -12,6 +13,8 @@
     <UpToDateCheckInput Include="..\RedShot.Desktop.Shared\**\*.xaml" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\RedShot.Eto.Desktop\RedShot.Eto.Desktop.csproj" />
+    <ProjectReference Include="..\..\RedShot.Infrastructure.DomainServices\RedShot.Infrastructure.DomainServices.csproj" />
     <ProjectReference Include="..\..\RedShot.Mvvm\RedShot.Mvvm.csproj" />
   </ItemGroup>
   <Import Project="..\RedShot.Desktop.Shared\RedShot.Desktop.Shared.projitems" Label="Shared" />
