--- a/version 2/src/RedShot.Desktop/RedShot.Desktop.Skia.Wpf.Host/RedShot.Desktop.Skia.Wpf.Host.csproj
+++ b/version 2/src/RedShot.Desktop/RedShot.Desktop.Skia.Wpf.Host/RedShot.Desktop.Skia.Wpf.Host.csproj
@@ -1,12 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
     <OutputType Condition="'$(Configuration)'=='Release'">WinExe</OutputType>
     <OutputType Condition="'$(Configuration)'=='Debug'">Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UseWPF>true</UseWPF>
     <LangVersion>latest</LangVersion>
+    <UseWPF>true</UseWPF>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Include="Uno.UI.Skia.Wpf" Version="3.10.11" />
     <PackageReference Include="Uno.UI.RemoteControl" Version="3.10.11" Condition="'$(Configuration)'=='Debug'" />
   </ItemGroup>
