--- a/version 2/src/RedShot.Desktop/RedShot.Desktop.Skia.Wpf/RedShot.Desktop.Skia.Wpf.csproj
+++ b/version 2/src/RedShot.Desktop/RedShot.Desktop.Skia.Wpf/RedShot.Desktop.Skia.Wpf.csproj
@@ -14,6 +14,8 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\RedShot.Eto.Desktop\RedShot.Eto.Desktop.csproj" />
+    <ProjectReference Include="..\..\RedShot.Infrastructure.Configuration\RedShot.Infrastructure.Configuration.csproj" />
+    <ProjectReference Include="..\..\RedShot.Infrastructure.DomainServices.Windows\RedShot.Infrastructure.DomainServices.Windows.csproj" />
     <ProjectReference Include="..\..\RedShot.Infrastructure.DomainServices\RedShot.Infrastructure.DomainServices.csproj" />
     <ProjectReference Include="..\..\RedShot.Mvvm\RedShot.Mvvm.csproj" />
   </ItemGroup>
