--- a/version 2/src/RedShot.Infrastructure.DomainServices/RedShot.Infrastructure.DomainServices.csproj
+++ b/version 2/src/RedShot.Infrastructure.DomainServices/RedShot.Infrastructure.DomainServices.csproj
@@ -2,14 +2,19 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentFTP" Version="35.0.5" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Saritasa.Tools.Domain" Version="0.8.2" />
+    <PackageReference Include="SSH.NET" Version="2020.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\RedShot.Infrastructure.Abstractions\RedShot.Infrastructure.Abstractions.csproj" />
+    <ProjectReference Include="..\RedShot.Infrastructure.DomainServices.Common\RedShot.Infrastructure.DomainServices.Common.csproj" />
   </ItemGroup>
 
 </Project>
