Update the services registration #SN-107

--- a/version 2/src/RedShot.Mvvm/RedShot.Mvvm.csproj
+++ b/version 2/src/RedShot.Mvvm/RedShot.Mvvm.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\RedShot.Infrastructure.Abstractions\RedShot.Infrastructure.Abstractions.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModels\Screenshots\" />
+  </ItemGroup>
+
 </Project>
