--- a/version 2/src/RedShot.Eto.Desktop/RedShot.Eto.Desktop.csproj
+++ b/version 2/src/RedShot.Eto.Desktop/RedShot.Eto.Desktop.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Eto.Forms" Version="2.5.10" />
     <PackageReference Include="Eto.Platform.Windows" Version="2.5.10" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Saritasa.Tools.Domain" Version="0.8.2" />
   </ItemGroup>
 
   <PropertyGroup Condition=" '$(OS)' == 'Windows_NT' ">
@@ -19,6 +20,7 @@
 
   <ItemGroup>
     <PackageReference Condition=" '$(OS)' != 'Windows_NT' " Include="Eto.Platform.Gtk" Version="2.5.11" />
+    <PackageReference Include="System.Reactive" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
