--- a/version 2/src/RedShot.Mvvm/RedShot.Mvvm.csproj
+++ b/version 2/src/RedShot.Mvvm/RedShot.Mvvm.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\RedShot.Desktop.Infrastructure.Common\RedShot.Desktop.Infrastructure.Common.csproj" />
     <ProjectReference Include="..\RedShot.Infrastructure.Abstractions\RedShot.Infrastructure.Abstractions.csproj" />
+    <ProjectReference Include="..\RedShot.Infrastructure.Configuration\RedShot.Infrastructure.Configuration.csproj" />
   </ItemGroup>
 
   <ItemGroup>
